# Axiom

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pytest.ini
cli/: platform_cli.py  pyproject.toml
cli/commands/: adversarial.py  bootstrap_cmd.py  chain_cmd.py  checkpoint_cmd.py  drift_cmd.py  env_generate.py  harness.py  init_project.py  project_cmd.py  refresh_cmd.py  runtime_cmd.py  scan_cmd.py  serve_cmd.py  ship_cmd.py  ssh_connect.py  start_cmd.py  status.py
dashboard/: Dockerfile  requirements.txt
dashboard/api/: app.py  auth.py  draft_routes.py  health_routes.py  infer_routes.py  project_routes.py  queue_routes.py  (+6 more)
docs/: comparison.md  excluded_files.md  llm-prompts.md  macstudio-service-map.md  test-quality-audit.md  verified_post_cutoff.md  workflow.md
scripts/: migrate-to-compose.sh
specs/: 000-platform-vision.md  001-shared-skill-preamble.md  002-ask-user-question-standard.md  003-validation-tiers.md  004-review-skill.md  005-ship-skill.md  006-spec-taxonomy.md  007-session-sweep-cron.md  010-deterministic-harness.md  011-adversarial-evaluation.md  012-model-registry.md  013-autonomous-orchestrator.md  014-autonomous-runtime.md  015-dashboard.md  016-autonomous-agent-prompt.md  017-runtime-hardening.md  021-platform-sharing.md  022-multi-repo-dashboard.md  023-idea-fab.md  024-queue-review-pipeline.md  025-dashboard-queue-redesign.md  026-spec-code-alignment.md  027-repo-hygiene.md  028-infrastructure-design.md  029-functional-verification.md  030-spec-inference.md  INDEX.md  README.md
(+134 files in other folders)
